prepare to merge w/en_dictionary

--- a/lang/pt.json
+++ b/lang/pt.json
@@ -1,277 +1,219 @@
-{   
-    "Absence": "Ausência",
-    "Active medications" : "Medicações ativas",
-    "Add question": "Adicionar questão",
-    "Add video recording (optional)": "Adicionar gravação de video (opcional)",
-    "Activate reminders for this medication" : "Activar lembrete para esta medicação",
-    "Age": "Idade",
-    "Alcohol or Drug Abuse": "Abuso de Alcool ou Drogas",
-    "Allow Connected Device(s)": "Permitir conecção de dispositivo(s)",
-    "Already have an account?": "Já tem conta? ",
-    "An undefined error happened.": "Ocorreu um erro indefinido.",
-    "Answer": "Resposta",
-    "Associate now!": "Associar agora!",
-    "Atonic": "Atónica",
-    "Automatic Repeated Movements": "Movimentos automaticos e repetitivos",
-    "Awake": "Acordar",
-
+{
     
-    "Bad": "Mau",
-    "Birth Control Pills": "Pilula",
-    "Bright or flashing lights": "Luzes intermitentes",
+    "daily tip": "dica do dia",
 
-
-    "Camera Access": "Acesso à câmera",
-    "Cancel": "Cancelar",
-    "Caregiver": "Cuidador",
-    "caregiver@gmail.com": "cuidador@gmail.com",
-    "Challenges in Epilepsy": "Desafios da Epilepsia",
-    "Changes in Medication": "Mudanças na medicação",
-    "Changes in awareness": "Alteração de consciência",
-    "Click here to add": "Toca aqui para adicionar",
-    "Click here to choose": "Toca aqui para escolher",
-    "Clonic": "Clonica",
-    "Complete now!": "Completar agora!",
-    "Connect": "Conectar",
-    "CONNECT": "DISPOSITIVOS",
-    "Connect Device": "Conectar Dispositivos",
-    "Connected Devices": "Dispositivos",
-    "Cream" : "Creme",
-    "Create": "Criar",
-    "Custom": "Base",
-
-
-    "Date": "Data",
-    "Data": "Dados",
-    "Date(s) of seizure(s)" : "Data(s) da(s) crise(s)",
-    "Daily tip": "Dica do dia",
-    "Deep Calm": "Calma profunda",
-    "Description": "Descrição",
-    "Description:": "Descrição:",
-    "Description Notes": "Notas de descrição",
-    "Did you miss any medication": "Medicação em dia",
-    "Dismiss": "Descartar",
-    "Diziness": "Tonturas",
-    "Done" : "Feito",
-    "Don't have an account? ": "Não tem conta criada? ",
-    "Don't have an account?": "Não tem conta?",
-    "Dosage" : "Dosagem",
-    "Duration of seizure": "Duração da crise",
-
-
-    "Education" : "Educação",
-    "Email is Required": "É necessário um email",
-    "Emergency": "Emergência",
-    "Emotional Stress": "Stress emocional",
-    "(e.g. once a week)": "(por exemplo uma vez por semana)",
-    "(e.g. mm:ss)": "(exemplo min:seg)",
-    "(e.g. hh:mm am or hh:mm pm)": "(exemplo hh:min manhã ou hh:min tarde)",
-    "Error": "Erro",
-    "Exhale": "Expire",
-
-
-    "Female": "Feminino",
-    "Fever or Overheated": "Febre",
-    "Final date" : "Última toma",
-    "Finish": "Terminar",
-    "Food": "Alimentação",
-
-
-    "Good": "Bom",
-
-
-    "Had an aura": "Sentir uma aura",
-    "Has to be a valid Email.": "Tem de ser um email valido.",
-    "Headaches": "Dor de cabeça",
-    "Hold": "Sustenha",
-    "Home": "Pagina inicial",
-    "Hormonal Fluctuations": "Flutuações Hormonais",
-    "hours" : "horas",
-
-
-    "I am ok": "Estou bem",
-    "Information": "Informação",
-    "Inhale": "Inspire",
-    "Inhale-Hold-Exhale-Hold": "Inspire-Sustenha-Expire-Sustenha",
-    "Intake times" : "Horas da toma",
-    "Introduction to Epilepsy": "Introdução à Epilepsia",
-    "Irregular Diet": "Dieta Alimentação irregular",
-    "Irritability": "Irritabilidade",
-    "in order": "ordem",
-
-    "Join us in a meditation exercise": "Junta-te a nós num exercício de meditação",
-
-
-    "Keep exploring!": "Continuar a explorar!",
-
-
-    "Location": "Localização",
-    "Log Out" : "Sair",
-    "Log your sleeping schedule": "Registe o seu horario de sono",
-    "Loss of urine or bowel control": "Perda de urina ou de controlo da bexiga",
-    "Loss of Ability to communicate": "Perda de capacidade de comunicação",
-    "Loss of consciousness": "Perda de consciência",
-
-    "missing": "falta",
-    "Male": "Masculino",
-    "Managing Epilepsy": "Gerir Epilepsia",
-    "Medication": "Medicação",
-    "Medicine info" : "Descrição da medicação",
-    "Medicine type" : "Tipo de medicação",
-    "Medicine name" : "Nome da medicação",
-    "Medication history" : "Histórico de medicação",
-    "Medication prescription:   ": "Prescrição medicação:   ",
-    "Medication prescription": "Prescrição medicação",
-    "MODULES": "MODULOS",
-    "Mood": "Humor",
-    "Mood:": "Humor:",
-    "Mood after Seizure": "Humor após crise",
-    "Mood changes": "Mudanças de humor.",
-    "Moods": "Mudanças de humor",
-    "Most common seizure": "Crise mais comum",
-    "Most common type of seizure:   ": "Tipo de crise mais comum:   ",
-    "Most common type of seizure": "Tipo mais comum de crise",
-    "Most common secondary effects:   ": "Efeitos secundários mais comuns:   ",
-    "Must be filled.": "Tem de ser preenchido.",
-    "Muscle Stiffness": "Rigidez muscular",
-    "Muscle twitch": "Espasmos muscular",
-    "Muscle weakness": "Enfraquecimento muscular",
-    "Myoclonic": "Mioclónica",
-
-
-    "Name": "Nome",
-    "Name is Required": "É necessário um nome",
-    "Next": "Próxima",
-    "New seizure type" : "Novo tipo de crise",
-    "No": "Não",
-    "No patient associated yet!": "Nenhum paciente associado!",
-    "None": "Nenhum",
-    "Normal": "Normal",
-    "Not filled": "Não preenchido",
-    "Notes": "Notes",
-
-
-    "Other": "Outros",
-    "Other medication": "Outro medicamento",
-    "Overtired or irregular sleep": "Cansado ou sono irregular",
-    "Or sign in with a QR code": "Ou autenticar com código QR",
-
-
-    "Password": "Senha",
-    "Password is Required": "É necessário uma Senha",
-    "Patient": "Paciente",
-    "Patient Info": "Informação do Paciente",
-    "Patient successfully added!": "Paciente adicionado!",
-    "Patients": "Pacientes",
-    "PDF Export" : "Exportar PDF",
-    "Pill" : "Comprimido",
-    "Please enter a valid email address": "Por favor insira um email valido",
-    "Please scan the code of the person you will be monitoring.": "Por favor faça scan do código QR da pessoa que pretende monitorizar.",
-    "Possible triggers?": "Possiveis fatores que puderam despoletar crises?",
-    "Possible Trigger": "Fatores que possam ter dispoletado uma crise",
-    "Possible Triggers": "Possiveis fatores que puderam despoletar crises",
-    "Possible Triggers:": "Fatores que possam dispoletar uma crise",
-    "Post Events": "Eventos pós-crise",
-    "Post Events:": "Eventos pós crise:",
-    "Post Events Notes": "Notas de eventos pós crise",
-    "Pranayama": "Pranayama",
-    "Profile incomplete!": "Perfil incompleto!",
-    "Profile" : "Perfil",
+    "your email address appears to be invalid": "o seu email é invalido",
+    "your password is invalid": "a sua password está incorreta",
+    "user with this email doesn't exist": "o usuário com este e-mail não existe",
+    "user with this email has been disabled": "o usuário com este e-mail foi desativado",
+    "too many requests": "demasiados pedidos",
+    "try again later": "volte a tentar mais tarde",  
+    "signing in with Email and Password is not enabled": "o login com e-mail e senha não está ativado",
+    "an undefined error happened": "ocorreu um erro indefinido",
+    "sign in successful": "autenticação bem-sucedida",
+    "your password is too small": "a sua senha é muito pequena",
+    "this email has already been used": "este email já foi usado",
    
+    "none": "nenhum",
+    "unselected": "não selecionado",
+    "diziness": "tonturas",
+    "headaches": "dor de cabeça",
+    "irritability": "irritabilidade",
+    "mood changes": "mudanças de humor",
+    "skipping menstrual cycle": "ausência/alteração do ciclo menstrual",
+    "somnolence": "sonolência",
+    "sex": "género",
+    "male": "masculino",
+    "female": "feminino",
+    "must be filled": "tem de ser preenchido",
+    "name": "nome",
+    "age": "idade",
+    "seizure frequency": "frequência de crises",
+    "(e.g. once a week)": "(por exemplo uma vez por semana)",
+    "most common type of seizure": "tipo de crise mais comum ",
+    "absence": "ausência",
+    "atonic": "atónica",
+    "clonic": "clonica",
+    "myoclonic": "mioclónica",
+    "tonic": "tónica",
+    "tonic Clonic": "tónica clónica",
+    "medication prescription": "medicamentos prescritos",
+    "other medication": "outro medicamento",
+    "most common secondary effects": "efeitos secundários mais comuns",
+    "finish": "terminar",
 
-    "Question": "Questões",
+
+    "has to be a valid Email": "tem de ser um email valido",
+    "you need a password": "necessita de uma senha",
+    "password": "senha",
+    "sign in": "autenticar",
+    "don't have an account": "não tem conta criada",
+    "sign up": "registar",
+
+
+    "patient": "paciente",
+    "caregiver": "cuidador",
+    "you need an email": "necessita de um email",
+    "already have an account": "já tem conta",
+
+    "error": "erro",
+
+    "introduction to Epilepsy": "introdução à Epilepsia",
+    "information": "informação",
+    "patients": "pacientes",
+    "camera access": "acesso à câmera",
+    "tool": "ferramenta",
+    "record seizure": "gravar crise",
+    "caregiver@gmail.com": "cuidador@gmail.com",
+
+
+    "the person you will be monitoring will have to scan this code": "a pessoa que irá monitorizar terá de fazer scan ao codigo QR",
+
+
+    "patient info": "informação do Paciente",
+    "seizures": "crises",
     
 
-    "Record Seizure": "Gravar crises",
-    "Relaxation" : "Meditação",
-    "Remembers event": "Lembra-se da crise",
-    "Remind me every" : "Lembrar-me a cada",
-    
-
-    "Save": "Guardar",
-    "Seizure": "Crise",
-    "Seizure Duration": "Duração da crise",
-    "Seizure Type:": "Tipo de crise:",
-    "Seizures": "Crises",
-    "Seizure Frequency": "Frequência de crises.",
-    "Set reminder" : "Definir lembrete",
-    "Sex": "Genero",
-    "Select interval between intakes" : "Definir intervalo entre tomas",
-    "Settings" : "Definições",
-    "Signing in with Email and Password is not enabled.": "O login com e-mail e senha não está ativado",
-    "Sign in successful": "Autenticação bem-sucedida",
-    "Sign in": "Autenticar",
-    "Sign Out": "Sair",
-    "Sign up": "Registar",
-    "Sick": "Doente",
-    "Sleep": "Sono",
-    "Sleepy": "Sonolento",
-    "Skipping Menstrual Cycle": "Ausência, alteração do ciclo menstrual.",
-    "Something went wrong... Verify camera permissions.": "Aconteceu alguma coisa... Por favor verifique as permissões da câmara.",
-    "Somnolence": "Sonolência",
-    "Square": "Quadrado",
-    "Start data" : "Data de início",
-    "START SCAN": "INICIAR SCAN",
-    "Starting time" : "Hora de início",
-    "Statistics": "Estatiticas",
-    "STATISTICS": "ESTATITICAS",
-    "Stressed? Relax here": "Exercicios de respiração",
-    "Submit": "Submeter",
-    "Survey Name": "Nome do questionário",
-    "Surveys": "Questionários",
-    "Symptoms": "Sintomas",
-    "Syringe" : "Seringa",
-    "Syrup" : "Xarope",
+    "allow connected device(s)": "permitir conecção de dispositivo(s)",
 
 
-    "The person you will be monitoring will have to scan this code.": "A pessoa que irá monitorizar terá de fazer scan ao codigo QR.",
-    "This email has already been used.": "Este email já foi usado.",
-    "Time": "Hora",
-    "Time of seizure" : "Hora da crise",
-    "Time duration": "Duração",
-    "To connect to your caregiver, have him scan this QR Code": "Para conectar-se ao seu cuidador terá de permitir que o mesmo faça o scan ao codigo QR",
-    "Today's mood": "Mood de hoje",
-    "Tonic": "Tónica",
-    "Tonic Clonic": "Tónica clónica",
-    "Too many requests. Try again later.": "Too many requests. Try again later.",  
-    "Tool": "Ferramenta",
-    "Treating Seizures": "Tratar crises",
-    "Triggers Notes": "Notas de fatores que podem dispoltar crises",
-    "Type": "Tipo",
-    "Type here": "Escreve aqui",
-    "Type of Seizure": "Tipos de crise",
-    "Types of seizures?": "Tipos de crises?",
-    "Types of exercises": "Tipos de exercicios",
-    
-
-    "Unnable to communicate": "Incapaz de comunicar",
-    "Unknown": "Não definido",
-    "Unselected": "Não selecionado",
-    "URL is Required": "É necessário um URL",
-    "User": "Utilizador",
-    "USER ID": "ID UTILIZADOR",
-    "User with this email doesn't exist.": "O usuário com este e-mail não existe.",
-    "User with this email has been disabled.": "O usuário com este e-mail foi desativado",
-    "Ujjayi": "Ujjayi",
+    "seizure": "crise",
+    "i am ok": "estou bem",
+    "emergency": "emergência",
+    "dismiss": "descartar",
 
 
-    "Was it one of your usual seizures" : "Foi uma das tuas crises habituais",
-    "We noticed there is still no patient associated to your account, please associate one.": "Reparámos que não tem nenhum paciente associado, por favor associe um.",
-    "We noticed your profile is incomplete, please complete it.": "Reparámos que tem o perfil incomplete, por favor complete-o.",
-    "What is Epilepsy?": "O que é a epilépsia?",
-    "What is a seizure?": "O que é uma crise?",
-    "What is SUDEP?": "O que é SUDEP?",
+    "inhale": "insprire",
+    "hold": "sustenha",
+    "exhale": "expire",
+    "location":"localização",
 
-    
-    "Yes": "Sim",
-    "You need an email.": "Necessita de um email.",
-    "You need a password.": "Necessita de uma senha.",
-    "You need a question": "Necessita de questões",
-    "You need a Survey Name": "É necessário dar um nome ao questionário",
-    "You need to set a duration.": "Precisa de definir uma duração.",
-    "You need to set a time": "Precisa de definir uma hora",
-    "Your email address appears to be invalid.": "O seu email é invalido",
-    "Your password is too small.": "A sua senha é muito pequena.",
-    "Your password is invalid.": "A sua password está incorreta."
-    
+
+    "to connect to your caregiver, have him scan this QR Code": "para conectar-se ao seu cuidador terá de permitir que o mesmo faça o scan ao codigo QR",
+
+
+    "what is Epilepsy": "o que é a Epilépsia",
+    "what is a seizure": "o que é uma crise",
+    "types of seizures": "tipos de crises",
+    "possible trigers": "possíveis fatores que puderam despoletar crises",
+    "treating seizures": "tratar crises",
+    "managing Epilepsy": "gerir a Epilépsia",
+    "what is SUDEP": "o que é SUDEP",
+    "challenges in Epilepsy": "desafios da Epilépsia",
+
+
+    "date": "data",
+    "time": "hora",
+    "duration": "duração",
+    "type": "tipo",
+    "mood": "humor",
+
+
+    "data": "dados",
+    "name is required": "é necessário um nome",
+    "symptoms": "sintomas",
+    "email is required": "é necessário um email",
+    "please enter a valid email address": "por favor insira um email valido",
+    "moods": "mudanças de humor",
+    "password is required": "é necessário uma Senha",
+    "birth control pills": "pilula",
+    "URL is required": "é necessário um URL",
+    "submit": "submeter",
+
+
+    "home": "pagina inicial",
+    "surveys": "questionários",
+    "user": "utilizador",
+    "increment":"incrementar",
+
+    "medication": "medicação",
+    "sleep": "sono",
+    "food": "alimentação",
+
+    "connected device(s)": "dispositivo ligado(s)",
+    "log your sleeping schedule": "registe o seu horario de sono",
+    "Stressed":"nervoso",
+    "Relax here": "relaxe aqui",
+
+    "types of exercises": "tipos de exercicios",
+    "time duration": "duração",
+    "1min":"1min",
+    "2min":"2min",
+    "5min":"5min",
+    "10min":"10min",
+
+
+    "you need to set a time": "precisa de definir uma hora",
+    "(e.g. hh:mm am or hh:mm pm)": "(exemplo hh:min manhã ou hh:min tarde)",
+    "you need to set a duration": "precisa de definir uma duração",
+    "seizure duration": "duração da crise",
+    "(e.g. mm:ss)": "(exemplo min:seg)",
+    "seizure type:": "tipo de crise",
+    "normal": "normal",
+    "good": "bom",
+    "bad": "mau",
+    "changes in medication": "mudanças na medicação",
+    "overtired or irregular sleep": "cansado ou sono irregular",
+    "irregular diet": "dieta/alimentação irregular",
+    "alcohol or drug abuse": "abuso de alcool ou drogas",
+    "bright or flashing lights": "luzes intermitentes",
+    "emotional stress": "stress emocional",
+    "fever or overheated": "febre",
+    "hormonal fluctuations": "flutuações Hormonais",
+    "sick": "doente",
+    "other": "outros",
+    "triggers notes": "notas de fatores que podem dispoltar crises",
+    "not filled": "não preenchido",
+    "description:": "descrição:",
+    "had an aura": "sentir uma aura",
+    "loss of urine or bowel control": "perda de urina ou de controlo da bexiga",
+    "changes in awareness": "alteração de consciência",
+    "automatic repeated movements": "movimentos automaticos e repetitivos",
+    "loss of ability to communicate": "perda de capacidade de comunicação",
+    "muscle stiffness": "rigidez muscular",
+    "muscle twitch": "espasmos muscular",
+    "loss of consciousness": "perda de consciência",
+    "description notes": "notas de descrição",
+    "post events:": "eventos pós crise",
+    "unnable to communicate": "incapaz de comunicar",
+    "remembers event": "lembra-se da crise",
+    "muscle weakness": "enfraquecimento muscular",
+    "sleepy": "sonolento",
+    "post events notes": "notas de eventos pós crise",
+    "add video recording (optional)": "adicionar gravação de video (opcional)",
+
+
+    "sign Out": "sair",
+
+
+    "type of seizure": "tipos de crise",
+    "mood after seizure": "humor após crise",
+    "possible triggers": "possiveis fatores que puderam despoletar crises",
+
+
+    "Inhale-Hold-Exhale-Hold": "Inspire-Sustenha-Expire-Sustenha",
+    "custom": "base",
+    "awake": "acordar",
+    "deep calm": "calma profunda",
+    "pranayama": "pranayama",
+    "square": "quadrado",
+    "ujjayi": "ujjayi",
+
+
+    "statistics": "estatiticas",
+    "modules": "modulos",
+    "connect": "dispositivos",
+
+
+    "you need a survey Name": "é necessário dar um nome ao questionário",
+    "survey name": "nome do questionário",
+    "you need a question": "necessita de questões",
+    "question": "questões",
+    "add question": "adicionar questão",
+    "create": "criar",
+
+
+    "next": "próxima",
+    "answer":"resposta"
+
 }
