some other translations

--- a/lang/pt.json
+++ b/lang/pt.json
@@ -1,219 +1,227 @@
 {
-    
-    "daily tip": "dica do dia",
+    "(e.g. hh:mm am or hh:mm pm)": "(ex: hh:min manhã ou hh:min tarde)",
+    "(e.g. mm:ss)": "(ex: min:seg)",
+    "(e.g. once a week)": "(por ex: uma vez por semana)",
 
-    "your email address appears to be invalid": "o seu email é invalido",
-    "your password is invalid": "a sua password está incorreta",
-    "user with this email doesn't exist": "o usuário com este e-mail não existe",
-    "user with this email has been disabled": "o usuário com este e-mail foi desativado",
-    "too many requests": "demasiados pedidos",
-    "try again later": "volte a tentar mais tarde",  
-    "signing in with Email and Password is not enabled": "o login com e-mail e senha não está ativado",
-    "an undefined error happened": "ocorreu um erro indefinido",
-    "sign in successful": "autenticação bem-sucedida",
-    "your password is too small": "a sua senha é muito pequena",
-    "this email has already been used": "este email já foi usado",
-   
-    "none": "nenhum",
-    "unselected": "não selecionado",
-    "diziness": "tonturas",
-    "headaches": "dor de cabeça",
-    "irritability": "irritabilidade",
-    "mood changes": "mudanças de humor",
-    "skipping menstrual cycle": "ausência/alteração do ciclo menstrual",
-    "somnolence": "sonolência",
-    "sex": "género",
-    "male": "masculino",
-    "female": "feminino",
-    "must be filled": "tem de ser preenchido",
-    "name": "nome",
-    "age": "idade",
-    "seizure frequency": "frequência de crises",
-    "(e.g. once a week)": "(por exemplo uma vez por semana)",
-    "most common type of seizure": "tipo de crise mais comum ",
+    "a seizure": "uma crise",
+    "active medication": "medicação ativa",
     "absence": "ausência",
-    "atonic": "atónica",
-    "clonic": "clonica",
-    "myoclonic": "mioclónica",
-    "tonic": "tónica",
-    "tonic Clonic": "tónica clónica",
-    "medication prescription": "medicamentos prescritos",
-    "other medication": "outro medicamento",
-    "most common secondary effects": "efeitos secundários mais comuns",
-    "finish": "terminar",
-
-
-    "has to be a valid Email": "tem de ser um email valido",
-    "you need a password": "necessita de uma senha",
-    "password": "senha",
-    "sign in": "autenticar",
-    "don't have an account": "não tem conta criada",
-    "sign up": "registar",
-
-
-    "patient": "paciente",
-    "caregiver": "cuidador",
-    "you need an email": "necessita de um email",
-    "already have an account": "já tem conta",
-
-    "error": "erro",
-
-    "introduction to Epilepsy": "introdução à Epilepsia",
-    "information": "informação",
-    "patients": "pacientes",
-    "camera access": "acesso à câmera",
-    "tool": "ferramenta",
-    "record seizure": "gravar crise",
-    "caregiver@gmail.com": "cuidador@gmail.com",
-
-
-    "the person you will be monitoring will have to scan this code": "a pessoa que irá monitorizar terá de fazer scan ao codigo QR",
-
-
-    "patient info": "informação do Paciente",
-    "seizures": "crises",
-    
-
+    "add question": "adicionar questão",
+    "add video recording (optional)": "adicionar gravação de video (opcional)",
+    "afternoon": "tarde",
+    "age": "idade",
+    "alcohol or drug abuse": "abuso de alcool ou drogas",
     "allow connected device(s)": "permitir conecção de dispositivo(s)",
+    "already have an account": "já tem conta",
+    "an undefined error happened": "ocorreu um erro indefinido",
+    "answer": "resposta",
+    "atonic": "atónica",
+    "automatic repeated movements": "movimentos automaticos e repetitivos",
+    "awake": "acordar",
 
-
-    "seizure": "crise",
-    "i am ok": "estou bem",
-    "emergency": "emergência",
-    "dismiss": "descartar",
-
-
-    "inhale": "insprire",
-    "hold": "sustenha",
-    "exhale": "expire",
-    "location":"localização",
-
-
-    "to connect to your caregiver, have him scan this QR Code": "para conectar-se ao seu cuidador terá de permitir que o mesmo faça o scan ao codigo QR",
-
-
-    "what is Epilepsy": "o que é a Epilépsia",
-    "what is a seizure": "o que é uma crise",
-    "types of seizures": "tipos de crises",
-    "possible trigers": "possíveis fatores que puderam despoletar crises",
-    "treating seizures": "tratar crises",
-    "managing Epilepsy": "gerir a Epilépsia",
-    "what is SUDEP": "o que é SUDEP",
-    "challenges in Epilepsy": "desafios da Epilépsia",
-
-
-    "date": "data",
-    "time": "hora",
-    "duration": "duração",
-    "type": "tipo",
-    "mood": "humor",
-
-
-    "data": "dados",
-    "name is required": "é necessário um nome",
-    "symptoms": "sintomas",
-    "email is required": "é necessário um email",
-    "please enter a valid email address": "por favor insira um email valido",
-    "moods": "mudanças de humor",
-    "password is required": "é necessário uma Senha",
+    "bad": "mau",
     "birth control pills": "pilula",
-    "URL is required": "é necessário um URL",
-    "submit": "submeter",
+    "breathing exercises": "exercícios de respiração",
+    "bright or flashing lights": "luzes intermitentes",
 
+    "camera access": "acesso à câmera",
+    "caregiver": "cuidador",
+    "calendar": "calndário",
+    "challenges in Epilepsy": "desafios da Epilepsia",
+    "changes in awareness": "alteração de consciência",
+    "changes in medication": "mudanças na medicação",
+    "clonic": "clonica",
+    "connect": "dispositivos",
+    "connected device(s)": "dispositivo ligado(s)",
+    "create": "criar",
+    "custom": "base",
 
-    "home": "pagina inicial",
-    "surveys": "questionários",
-    "user": "utilizador",
-    "increment":"incrementar",
+    "daily tip": "dica do dia",
+    "data": "dados",
+    "date": "data",
+    "date(s) of seizure(s)": "data(s) da(s) crise(s)",
+    "deep calm": "calma profunda",
+    "description notes": "notas de descrição",
+    "description:": "descrição:",
+    "dismiss": "descartar",
+    "diziness": "tonturas",
+    "don't have an account": "não tem conta criada",
+    "dosage": "dose",
+    "duration": "duração",
 
-    "medication": "medicação",
-    "sleep": "sono",
+    "education": "educação",
+    "email is required": "é necessário um email",
+    "emergency": "emergência",
+    "emergency medication": "toma espontânea",
+    "emotional stress": "stress emocional",
+    "Epilepsy": "Epilepsia",
+    "error": "erro",
+    "exercises": "exercícios",
+    "exhale": "expire",
+
+    "female": "feminino",
+    "fever or overheated": "febre",
+    "finish": "terminar",
     "food": "alimentação",
 
-    "connected device(s)": "dispositivo ligado(s)",
-    "log your sleeping schedule": "registe o seu horario de sono",
-    "Stressed":"nervoso",
-    "Relax here": "relaxe aqui",
-
-    "types of exercises": "tipos de exercicios",
-    "time duration": "duração",
-    "1min":"1min",
-    "2min":"2min",
-    "5min":"5min",
-    "10min":"10min",
-
-
-    "you need to set a time": "precisa de definir uma hora",
-    "(e.g. hh:mm am or hh:mm pm)": "(exemplo hh:min manhã ou hh:min tarde)",
-    "you need to set a duration": "precisa de definir uma duração",
-    "seizure duration": "duração da crise",
-    "(e.g. mm:ss)": "(exemplo min:seg)",
-    "seizure type:": "tipo de crise",
-    "normal": "normal",
+    "general": "geral",
     "good": "bom",
-    "bad": "mau",
-    "changes in medication": "mudanças na medicação",
-    "overtired or irregular sleep": "cansado ou sono irregular",
-    "irregular diet": "dieta/alimentação irregular",
-    "alcohol or drug abuse": "abuso de alcool ou drogas",
-    "bright or flashing lights": "luzes intermitentes",
-    "emotional stress": "stress emocional",
-    "fever or overheated": "febre",
-    "hormonal fluctuations": "flutuações Hormonais",
-    "sick": "doente",
-    "other": "outros",
-    "triggers notes": "notas de fatores que podem dispoltar crises",
-    "not filled": "não preenchido",
-    "description:": "descrição:",
+
     "had an aura": "sentir uma aura",
-    "loss of urine or bowel control": "perda de urina ou de controlo da bexiga",
-    "changes in awareness": "alteração de consciência",
-    "automatic repeated movements": "movimentos automaticos e repetitivos",
+    "has to be a valid Email": "tem de ser um email valido",
+    "headaches": "dor de cabeça",
+    "hold": "sustenha",
+    "home": "página inicial",
+    "hormonal fluctuations": "flutuações hormonais",
+    "how are you feeling": "como te sentes hoje",
+
+    "I'm ok now": "Já estou bem",
+    "increment": "incrementar",
+    "information": "informação",
+    "inhale": "inspire",
+    "inhale-hold-exhale-hold": "inspire-sustenha-expire-sustenha",
+    "introduction to Epilepsy": "introdução à Epilepsia",
+    "irregular diet": "dieta/alimentação irregular",
+    "irritability": "irritabilidade",
+
+    "location": "localização",
+    "log your sleeping schedule": "registe o seu horario de sono",
+    "log out": "sair",
     "loss of ability to communicate": "perda de capacidade de comunicação",
+    "loss of consciousness": "perda de consciência",
+    "loss of urine or bowel control": "perda de urina ou de controlo da bexiga",
+
+    "male": "masculino",
+    "managing Epilepsy": "gerir a Epilépsia",
+    "medication": "medicação",
+    "medication prescription": "medicamentos prescritos",
+    "missed any medication": "alguma medicação em falta",
+    "modules": "modulos",
+    "mood": "humor",
+    "mood after seizure": "humor após crise",
+    "mood changes": "mudanças de humor",
+    "moods": "mudanças de humor",
+    "morning": "manhã",
+    "most common secondary effects": "efeitos secundários mais comuns",
+    "most common type of seizure": "tipo de crise mais comum ",
     "muscle stiffness": "rigidez muscular",
     "muscle twitch": "espasmos muscular",
-    "loss of consciousness": "perda de consciência",
-    "description notes": "notas de descrição",
-    "post events:": "eventos pós crise",
-    "unnable to communicate": "incapaz de comunicar",
-    "remembers event": "lembra-se da crise",
     "muscle weakness": "enfraquecimento muscular",
-    "sleepy": "sonolento",
-    "post events notes": "notas de eventos pós crise",
-    "add video recording (optional)": "adicionar gravação de video (opcional)",
+    "must be filled": "tem de ser preenchido",
+    "my questions": "as minhas questões",
+    "myoclonic": "mioclónica",
 
-
-    "sign Out": "sair",
-
-
-    "type of seizure": "tipos de crise",
-    "mood after seizure": "humor após crise",
-    "possible triggers": "possiveis fatores que puderam despoletar crises",
-
-
-    "Inhale-Hold-Exhale-Hold": "Inspire-Sustenha-Expire-Sustenha",
-    "custom": "base",
-    "awake": "acordar",
-    "deep calm": "calma profunda",
-    "pranayama": "pranayama",
-    "square": "quadrado",
-    "ujjayi": "ujjayi",
-
-
-    "statistics": "estatiticas",
-    "modules": "modulos",
-    "connect": "dispositivos",
-
-
-    "you need a survey Name": "é necessário dar um nome ao questionário",
-    "survey name": "nome do questionário",
-    "you need a question": "necessita de questões",
-    "question": "questões",
-    "add question": "adicionar questão",
-    "create": "criar",
-
-
+    "name": "nome",
+    "name is required": "é necessário um nome",
     "next": "próxima",
-    "answer":"resposta"
+    "new seizure event": "novo evento de crise",
+    "new seizure type": "novo tipo de crise",
+    "night": "noite",
+    "no": "não",
+    "none": "nenhum",
+    "normal": "normal",
+    "not filled": "não preenchido",
 
+    "other": "outros",
+    "other medication": "outro medicamento",
+    "overtired or irregular sleep": "cansado ou sono irregular",
+
+    "password": "senha",
+    "password is required": "é necessário uma Senha",
+    "patient": "paciente",
+    "patient info": "informação do Paciente",
+    "patients": "pacientes",
+    "PDF export": "exportar PDF",
+    "pills": "comprimidos",
+    "please enter a valid email address": "por favor insira um email valido",
+    "press here to add": "pressiona aqui para adicionar",
+    "press here to choose": "pressionar aqui para escolher",
+    "previous medication": "medicação anterior",
+    "profile": "perfil",
+    "possible trigers": "possíveis fatores que puderam despoletar crises",
+    "possible triggers": "possiveis fatores que puderam despoletar crises",
+    "post events notes": "notas de eventos pós crise",
+    "post events:": "eventos pós crise",
+    "pranayama": "pranayama",
+
+    "question": "questões",
+
+    "record seizure": "gravar crise",
+    "relax here": "relaxe aqui",
+    "remembers event": "lembra-se da crise",
+    "remind me every": "lembrar-me a cada",
+
+    "save": "guardar",
+    "seizure": "crise",
+    "seizure duration": "duração da crise",
+    "seizure frequency": "frequência de crises",
+    "seizure type:": "tipo de crise",
+    "seizures": "crises",
+    "select interval between intakes": "selectionar intervalo entre tomas",
+    "set reminders": "definir lembretes",
+    "sex": "género",
+    "sick": "doente",
+    "sign Out": "sair",
+    "sign in": "autenticar",
+    "sign in successful": "autenticação bem-sucedida",
+    "sign up": "registar",
+    "signing in with Email and Password is not enabled": "o login com e-mail e senha não está ativado",
+    "skipping menstrual cycle": "ausência/alteração do ciclo menstrual",
+    "sleep": "sono",
+    "sleep log": "registo de sono",
+    "sleepy": "sonolento",
+    "somnolence": "sonolência",
+    "square": "quadrado",
+    "start date": "início da toma",
+    "statistics": "estatiticas",
+    "starting time": "hora de início",
+    "stressed": "nervoso",
+    "submit": "submeter",
+    "SUDEP": "SUDEP",
+    "survey name": "nome do questionário",
+    "surveys": "questionários",
+    "symptoms": "sintomas",
+
+    "tablespoons": "colheres",
+    "the person you will be monitoring will have to scan this code": "a pessoa que irá monitorizar terá de fazer scan ao codigo QR",
+    "this email has already been used": "este email já foi usado",
+    "time": "hora",
+    "time of seizure": "hora da crise",
+    "to connect to your caregiver, have him scan this QR Code": "para conectar-se ao seu cuidador terá de permitir que o mesmo faça o scan ao codigo QR",
+    "tonic": "tónica",
+    "tonic-clonic": "tónica-clónica",
+    "too many requests": "demasiados pedidos",
+    "tool": "ferramenta",
+    "treating seizures": "tratar crises",
+    "triggers notes": "notas de fatores que podem dispoltar crises",
+    "try again later": "volte a tentar mais tarde",
+    "type of": "tipo de",
+    "type here": "escreve aqui",
+    "types of": "tipos de",
+    "types of exercises": "tipos de exercicios",
+    "types of seizures": "tipos de crises",
+
+
+    "ujjayi": "ujjayi",
+    "unnable to communicate": "incapaz de comunicar",
+    "unselected": "não selecionado",
+    "upon awaking": "ao acordar",
+    "URL is required": "é necessário um URL",
+    "user": "utilizador",
+    "user with this email doesn't exist": "o usuário com este e-mail não existe",
+    "user with this email has been disabled": "o usuário com este e-mail foi desativado",
+
+    "was it one of your usual seizures": "foi uma das tuas crises habituais",
+    "what is": "o que é",
+    "while sleeping": "a dormir",
+
+    "you need a password": "necessita de uma senha",
+    "you need a question": "necessita de questões",
+    "you need a survey Name": "é necessário dar um nome ao questionário",
+    "you need an email": "necessita de um email",
+    "you need to set a duration": "precisa de definir uma duração",
+    "you need to set a time": "precisa de definir uma hora",
+    "your email address appears to be invalid": "o seu email é invalido",
+    "your password is invalid": "a sua password está incorreta",
+    "your password is too small": "a sua senha é muito pequena"
 }
