--- a/lang/en.json
+++ b/lang/en.json
@@ -1,218 +1,227 @@
 {
-    "daily tip": "daily tip",
 
-    "your email address appears to be invalid": "your email address appears to be invalid",
-    "your password is invalid": "your password is invalid",
-    "user with this email doesn't exist": "user with this email doesn't exist",
-    "user with this email has been disabled": "user with this email has been disabled",
-    "too many requests" :"too many requests",
-    "try again later": "try again later",  
-    "signing in with Email and Password is not enabled": "signing in with Email and Password is not enabled",
-    "an undefined error happened": "an undefined error happened",
-    "sign in successful": "sign in successful",
-    "your password is too small": "your password is too small",
-    "this email has already been used": "this email has already been used",
-   
-    "none": "none",
-    "unselected": "unselected",
-    "diziness": "diziness",
-    "headaches": "headaches",
-    "irritability": "irritability",
-    "mood changes": "mood changes",
-    "skipping menstrual cycle": "skipping Menstrual Cycle",
-    "somnolence": "somnolence",
-    "sex": "sex",
-    "male": "male",
-    "female": "female",
-    "must be filled": "must be filled",
-    "name": "name",
-    "age": "age",
-    "seizure frequency": "seizure frequency",
+    "(e.g. hh:mm am or hh:mm pm)": "(e.g. hh:mm am or hh:mm pm)",
+    "(e.g. mm:ss)": "(e.g. mm:ss)",
     "(e.g. once a week)": "(e.g. once a week)",
-    "most common type of seizure": "most common type of seizure",
-    "absence": "absence",
-    "atonic": "atonic",
-    "clonic": "clonic",
-    "myoclonic": "myoclonic",
-    "tonic": "tonic",
-    "tonic Clonic": "tonic clonic",
-    "medication prescription": "medication prescription",
-    "other medication": "other medication",
-    "most common secondary effects": "most common secondary effects",
-    "finish": "finish",
 
-
-    "has to be a valid Email": "has to be a valid Email",
-    "you need a password": "you need a password",
-    "password": "password",
-    "sign in": "sign in",
-    "don't have an account": "don't have an account",
-    "sign up": "sign up",
-
-
-    "patient": "patient",
-    "caregiver": "caregiver",
-    "you need an email": "you need an email",
-    "already have an account": "already have an account",
-
-    "error": "error",
-
-
-    "introduction to Epilepsy": "introduction to Epilepsy",
-    "information": "information",
-    "patients": "patients",
-    "camera access": "camera access",
-    "tool": "tool",
-    "record seizure": "record seizure",
-    "caregiver@gmail.com": "caregiver@gmail.com",
-
-
-    "the person you will be monitoring will have to scan this code": "the person you will be monitoring will have to scan this code",
-
-
-    "patient info": "patient info",
-    "seizures": "seizures",
     
+    "URL is required": "URL is required",
 
+    "a seizure": "a seizure",
+    "active medication": "active medication",
+    "absence": "absence",
+    "add question": "add question",
+    "add video recording (optional)": "add video recording (optional)",
+    "afternoon": "afternoon",
+    "age": "age",
+    "alcohol or drug abuse": "alcohol or drug abuse",
     "allow connected device(s)": "allow connected device(s)",
+    "already have an account": "already have an account",
+    "an undefined error happened": "an undefined error happened",
+    "answer": "resposta",
+    "atonic": "atonic",
+    "automatic Repeated Movements": "automatic repeated movements",
+    "awake": "awake",
 
+    "bad": "bad",
+    "birth control pills": "birth control pills",
+    "breathing exercises": "breathing exercises", 
+    "bright or flashing lights": "bright or flashing lights",
 
-    "seizure": "seizure",
-    "i am ok": "i am ok",
-    "emergency": "emergency",
+    "camera access": "camera access",
+    "caregiver": "caregiver",
+    "calendar": "calendar",
+    "challenges in Epilepsy": "challenges in Epilepsy",
+    "changes in awareness": "changes in awareness",
+    "changes in medication": "changes in medication",
+    "clonic": "clonic",
+    "connect": "connect",
+    "connected device(s)": "connected device(s)",
+    "create": "create",
+    "custom": "custom",
+
+    "daily tip": "daily tip",
+    "data": "data",
+    "date": "date",
+    "date(s) of seizure(s)": "date(s) of seizure(s)",
+    "deep calm": "deep Calm",
+    "description Notes": "description notes",
+    "description:": "description:",
     "dismiss": "dismiss",
+    "diziness": "diziness",
+    "dosage": "dosage", 
+    "don't have an account": "don't have an account",
+    "duration": "duration",
 
-
-    "inhale": "inhale",
-    "hold": "hold",
+    "education": "education",
+    "email is required": "email is required",
+    "emergency": "emergency",
+    "emergency medication": "emergency medication", 
+    "emotional stress": "emotional stress",
+    "Epilepsy": "Epilepsy",
+    "error": "error",
+    "exercises": "exercises",
     "exhale": "exhale",
 
-
-    "to connect to your caregiver, have him scan this QR Code": "to connect to your caregiver, have him scan this QR Code",
-
-
-    "what is Epilepsy": "what is Epilepsy",
-    "what is a seizure": "what is a seizure",
-    "types of seizures": "types of seizures",
-    "treating Seizures": "treating seizures",
-    "managing Epilepsy": "managing Epilepsy",
-    "what is SUDEP": "what is SUDEP",
-    "challenges in Epilepsy": "challenges in Epilepsy",
-
-
-    "date": "date",
-    "time": "time",
-    "duration": "duration",
-    "type": "type",
-    "mood": "mood",
-
-
-    "data": "data",
-    "name is required": "name is required",
-    "symptoms": "symptoms",
-    "email is required": "email is required",
-    "please enter a valid email address": "please enter a valid email address",
-    "moods": "moods",
-    "password is required": "password is required",
-    "birth control pills": "birth control pills",
-    "URL is required": "URL is required",
-    "submit": "submit",
-
-
-    "home": "home",
-    "surveys": "surveys",
-    "user": "user",
-    "increment":"increment",
-
-    "medication": "medication",
-    "sleep": "sleep",
+    "female": "female",
+    "fever or overheated": "fever or overheated",
+    "finish": "finish",
     "food": "food",
 
-    "connected device(s)": "connected device(s)",
-    "log your sleeping schedule": "log your sleeping schedule",
-    "stressed": "stressed", 
-    "relax here":" relax here",
-
-    "types of exercises": "types of exercises",
-    "time duration": "time duration",
-    "1min":"1min",
-    "2min":"2min",
-    "5min":"5min",
-    "10min":"10min",
-
-    "you need to set a time": "you need to set a time",
-    "(e.g. hh:mm am or hh:mm pm)": "(e.g. hh:mm am or hh:mm pm)",
-    "you need to set a duration": "you need to set a duration",
-    "seizure duration": "seizure duration",
-    "(e.g. mm:ss)": "(e.g. mm:ss)",
-    "seizure type:": "seizure type:",
-    "normal": "normal",
+    "general": "general",
     "good": "good",
-    "bad": "bad",
-    "possible triggers:": "possible triggers:",
-    "changes in medication": "changes in medication",
-    "overtired or irregular sleep": "overtired or irregular sleep",
-    "irregular diet": "irregular diet",
-    "alcohol or drug abuse": "alcohol or drug abuse",
-    "bright or flashing lights": "bright or flashing lights",
-    "emotional stress": "emotional stress",
-    "fever or overheated": "fever or overheated",
-    "hormonal fluctuations": "hormonal fluctuations",
-    "sick": "sick",
-    "other": "other",
-    "triggers notes": "triggers notes",
-    "not filled": "not filled",
-    "description:": "description:",
+
     "had an aura": "had an aura",
-    "loss of urine or bowel control": "loss of urine or bowel control",
-    "changes in awareness": "changes in awareness",
-    "automatic Repeated Movements": "automatic repeated movements",
+    "has to be a valid Email": "has to be a valid Email",
+    "headaches": "headaches",
+    "hold": "hold",
+    "home": "home",
+    "hormonal fluctuations": "hormonal fluctuations",
+    "how are you feeling": "how are you feeling", 
+
+    "I'm ok now": "I'm ok now",
+    "increment": "increment",
+    "information": "information",
+    "inhale": "inhale",
+    "inhale-hold-exhale-hold": "inhale-hold-exhale-hold",
+    "introduction to Epilepsy": "introduction to Epilepsy",
+    "irregular diet": "irregular diet",
+    "irritability": "irritability",
+
+    "location": "location",
+    "log your sleeping schedule": "log your sleeping schedule",
+    "log out": "log out",
     "loss of Ability to communicate": "loss of Ability to communicate",
+    "loss of consciousness": "loss of consciousness",
+    "loss of urine or bowel control": "loss of urine or bowel control",
+
+    "male": "male",
+    "managing Epilepsy": "managing Epilepsy",
+    "medication": "medication",
+    "medication prescription": "medication prescription",
+    "missed any medication": "missed any medication",
+    "modules": "modules",
+    "mood": "mood",
+    "mood after seizure": "mood after seizure",
+    "mood changes": "mood changes",
+    "moods": "moods",
+    "morning": "morning",
+    "most common secondary effects": "most common secondary effects",
+    "most common type of seizure": "most common type of seizure",
     "muscle Stiffness": "muscle stiffness",
     "muscle twitch": "muscle twitch",
-    "loss of consciousness": "loss of consciousness",
-    "description Notes": "description notes",
-    "post events:": "post events:",
-    "unnable to communicate": "unnable to communicate",
-    "remembers event": "remembers event",
     "muscle weakness": "muscle weakness",
-    "sleepy": "sleepy",
-    "post events notes": "post events notes",
-    "add video recording (optional)": "add video recording (optional)",
+    "must be filled": "must be filled",
+    "my questions": "my questions", 
+    "myoclonic": "myoclonic",
 
-
-    "sign Out": "sign out",
-
-
-    "type of seizure": "type of seizure",
-    "mood after seizure": "mood after seizure",
-    "possible triggers": "possible triggers",
-
-
-    "Inhale-Hold-Exhale-Hold": "Inhale-Hold-Exhale-Hold",
-    "custom": "custom",
-    "awake": "awake",
-    "deep calm": "deep Calm",
-    "pranayama": "pranayama",
-    "square": "square",
-    "ujjayi": "ujjayi",
-
-
-    "statistics": "statistics",
-    "modules": "modules",
-    "connect": "connect",
-
-
-    "you need a survey name": "you need a survey name",
-    "survey name": "survey name",
-    "you need a question": "you need a question",
-    "question": "question",
-    "add question": "add question",
-    "create": "create",
-
-
+    "name": "name",
+    "name is required": "name is required",
     "next": "next",
-    "location":"location",
-    "answer":"resposta"
+    "new seizure event": "new seizure event",
+    "new seizure type": "new seizure type",
+    "night": "night",
+    "no": "no",
+    "none": "none",
+    "normal": "normal",
+    "not filled": "not filled",
 
+    "other": "other",
+    "other medication": "other medication",
+    "overtired or irregular sleep": "overtired or irregular sleep",
+
+    "password": "password",
+    "password is required": "password is required",
+    "patient": "patient",
+    "patient info": "patient info",
+    "patients": "patients",
+    "PDF export": "PDF export",
+    "pills": "pills",
+    "please enter a valid email address": "please enter a valid email address",
+    "press here to add": "press here to add",
+    "press here to choose": "press here to choose",
+    "previous medication": "previous medication",
+    "profile": "profile",
+    "possible triggers": "possible triggers",
+    "possible triggers:": "possible triggers:",
+    "post events notes": "post events notes",
+    "post events:": "post events:",
+    "pranayama": "pranayama",
+
+    "question": "question",
+
+    "record seizure": "record seizure",
+    "relax here": " relax here",
+    "remembers event": "remembers event",
+    "remind me every": "remind me every",
+
+    "save": "save",
+    "seizure": "seizure",
+    "seizure duration": "seizure duration",
+    "seizure frequency": "seizure frequency",
+    "seizure type:": "seizure type:",
+    "seizures": "seizures",
+    "select interval between intakes": "select interval between intakes",
+    "set reminders": "set reminders",
+    "sex": "sex",
+    "sick": "sick",
+    "sign out": "sign out",
+    "sign in": "sign in",
+    "sign in successful": "sign in successful",
+    "sign up": "sign up",
+    "signing in with Email and Password is not enabled": "signing in with Email and Password is not enabled",
+    "skipping menstrual cycle": "skipping Menstrual Cycle",
+    "sleep": "sleep",
+    "sleep log": "sleep log",
+    "sleepy": "sleepy",
+    "somnolence": "somnolence",
+    "square": "square",
+    "start date": "start date",
+    "statistics": "statistics",
+    "starting time": "starting time",
+    "stressed": "stressed",
+    "submit": "submit",
+    "SUDEP": "SUDEP",
+    "survey name": "survey name",
+    "surveys": "surveys",
+    "symptoms": "symptoms",
+
+    "tablespoons": "tablespoons",
+    "the person you will be monitoring will have to scan this code": "the person you will be monitoring will have to scan this code",
+    "this email has already been used": "this email has already been used",
+    "time": "time",
+    "time of seizure": "time of seizure",
+    "to connect to your caregiver, have him scan this QR Code": "to connect to your caregiver, have him scan this QR Code",
+    "tonic": "tonic",
+    "tonic Clonic": "tonic clonic",
+    "too many requests": "too many requests",
+    "tool": "tool",
+    "treating seizures": "treating seizures",
+    "triggers notes": "triggers notes",
+    "try again later": "try again later",
+    "type of": "type of",
+    "type here": "type here",
+    "types of": "types of",
+
+    "ujjayi": "ujjayi",
+    "unnable to communicate": "unnable to communicate",
+    "unselected": "unselected",
+    "upon awaking": "upon awaking",
+    "user": "user",
+    "user with this email doesn't exist": "user with this email doesn't exist",
+    "user with this email has been disabled": "user with this email has been disabled",
+
+    "was it one of your usual seizures": "was it one of your usual seizures",
+    "what is": "what is",
+    "while sleeping": "while sleeping",
+
+    "you need a password": "you need a password",
+    "you need a question": "you need a question",
+    "you need a survey name": "you need a survey name",
+    "you need an email": "you need an email",
+    "you need to set a duration": "you need to set a duration",
+    "you need to set a time": "you need to set a time",
+    "your email address appears to be invalid": "your email address appears to be invalid",
+    "your password is invalid": "your password is invalid",
+    "your password is too small": "your password is too small"
 }
