--- a/lang/pt.json
+++ b/lang/pt.json
@@ -26,7 +26,7 @@
 
     "camera access": "acesso à câmera",
     "caregiver": "cuidador",
-    "calendar": "calndário",
+    "calendar": "calendário",
     "challenges in Epilepsy": "desafios da Epilepsia",
     "changes in awareness": "alteração de consciência",
     "changes in medication": "mudanças na medicação",
