--- a/lang/en.json
+++ b/lang/en.json
@@ -118,6 +118,7 @@
     "name": "name",
     "name is required": "name is required",
     "next": "next",
+    "new seizure": "new seizure",
     "new seizure event": "new seizure event",
     "new seizure type": "new seizure type",
     "night": "night",
