--- a/lang/pt.json
+++ b/lang/pt.json
@@ -114,6 +114,7 @@
     "name": "nome",
     "name is required": "é necessário um nome",
     "next": "próxima",
+    "new seizure": "nova crise",
     "new seizure event": "novo evento de crise",
     "new seizure type": "novo tipo de crise",
     "night": "noite",
