--- a/lang/en.json
+++ b/lang/en.json
@@ -10,6 +10,7 @@
     "a seizure": "a seizure",
     "active medication": "active medication",
     "absence": "absence",
+    "access QR code": "access QR code",
     "add question": "add question",
     "add video recording (optional)": "add video recording (optional)",
     "afternoon": "afternoon",
@@ -35,6 +36,7 @@
     "changes in awareness": "changes in awareness",
     "changes in medication": "changes in medication",
     "clonic": "clonic",
+    "color scheme": "color scheme",
     "connect": "connect",
     "connected device(s)": "connected device(s)",
     "create": "create",
@@ -160,10 +162,11 @@
     "seizure": "seizure",
     "seizure duration": "seizure duration",
     "seizure frequency": "seizure frequency",
-    "seizure type:": "seizure type:",
+    "seizure type": "seizure type",
     "seizures": "seizures",
     "select interval between intakes": "select interval between intakes",
     "set reminders": "set reminders",
+    "settings": "settings",
     "sex": "sex",
     "sick": "sick",
     "sign out": "sign out",
@@ -209,6 +212,7 @@
     "unselected": "unselected",
     "upon awaking": "upon awaking",
     "user": "user",
+    "user seizure types": "user seizure types",
     "user with this email doesn't exist": "user with this email doesn't exist",
     "user with this email has been disabled": "user with this email has been disabled",
 
