HomePage update | missing: overlook of the day + relax image

--- a/lang/pt.json
+++ b/lang/pt.json
@@ -60,6 +60,7 @@
     "error": "erro",
     "exercises": "exercícios",
     "exhale": "expire",
+    "explore these functionalities": "explora estas funcionalidades",
 
     "female": "feminino",
     "fever or overheated": "febre",
@@ -187,6 +188,7 @@
     "symptoms": "sintomas",
 
     "tablespoons": "colheres",
+    "take a look at your day": "o resumo do teu dia",
     "the person you will be monitoring will have to scan this code": "a pessoa que irá monitorizar terá de fazer scan ao codigo QR",
     "this email has already been used": "este email já foi usado",
     "time": "hora",
